# StegX

./: .commit-msg.tmp  .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  .snyk  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  StegX_v2_Technical_Report.md  create_cover.py  crypto.py  pyproject.toml  requirements-lock.txt  requirements.txt  steganography.py  stegx.py  todo.md  utils.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: aur.yml  ci.yml  debian.yml  docs.yml  fortify.yml  release.yml  snap.yml  testpypi.yml
DEBIAN/: README.Debian  changelog  control  copyright  postinst  postrm  prerm  stegx.1
Docs/: Coverage.md  StegX Security and Steganalysis Evaluation Report.md  StegX Test Case Explanations.md
Future/dev/: Future_Dev_ Features.md
completions/: README.md  _stegx  stegx.bash  stegx.fish
debian/: README.Debian  changelog  control  copyright  rules  stegx.1  stegx.bash-completion  stegx.docs  stegx.manpages  watch
debian/source/: options
debian/upstream/: metadata
docs/: Makefile  make.bat
docs/source/: conf.py  index.md
docs/source/api/: index.md
docs/source/cli/: index.md
docs/source/format/: index.md
docs/source/packaging/: index.md
docs/source/security/: evaluation-report.md  threat-model.md
docs/source/testing/: coverage.md  suite-legacy.md  suite.md  test-case-explanations-legacy.md
github/ISSUE_TEMPLATE/: feature_request.md
packaging/aur/: PKGBUILD  README.md
packaging/conda/: README.md  meta.yaml
packaging/flatpak/: README.md  io.github.deltasec.StegX.yaml
packaging/homebrew/: README.md  stegx.rb
requirements/: base.txt  dev.txt  docs.txt  extras.txt
snap/: snapcraft.yaml
src/stegx/: __init__.py  __main__.py  audit_log.py  cli.py  compression.py  constants.py  cover_preserve.py  cover_selector.py  crypto.py  decoy.py  embedding.py  exceptions.py  fips.py  header.py  io_sources.py  kdf.py  panic.py  polyglot.py  safe_paths.py  secure_memory.py  sentinel.py  shamir.py  steganography.py  utils.py  yubikey.py
src/stegx/data/: stegx_dict_v1.zstd
src/stegx/tools/: train_zstd_dict.py
stegx/: README.md  StegX Testing Suite.md  create_cover.py  pytest.ini  requirements.txt  stegx.py
stegx/stegx_core/: crypto.py  steganography.py  utils.py
stegx/tests/: __init__.py  conftest.py
stegx/tests/integration/: test_encode_flow.py
stegx/tests/performance/: test_performance.py
stegx/tests/unit/: test_crypto.py
tests/: __init__.py  _test_credentials.py  conftest.py  requirements.txt
tests/fuzz/: fuzz_extract.py
tests/integration/: test_encode_flow.py  test_rewrap.py
tests/performance/: test_performance.py
tests/resources/test_files/: test_secret.txt
tests/security/: test_audit_remediations.py  test_security.py
tests/steganalysis/: .gitignore  article_benchmark_medium.md  colab_academic_benchmark.py  colab_cnn_steganalysis.py  run_full_steganalysis.py
tests/steganalysis/results/: steganalysis_report.json
tests/system/: test_cli.py
tests/unit/: test_audit_log.py  test_compression.py  test_cover_preserve.py  test_cover_selector.py  test_crypto.py  test_fips_mode.py  test_header.py  test_io_sources.py  test_kdf.py  test_panic.py  test_polyglot.py  test_safe_paths.py  test_secure_memory.py  test_shamir.py  test_steganography.py  test_utils.py  test_yubikey.py
